--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task-manager",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .jsx,.js ./app/javascript/**/*",
@@ -17,8 +17,9 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-edit-inline2": "^1.0.2",
-    "react_ujs": "^2.4.4"
-  },
+    "react_ujs": "^2.4.4",
+    "eventbusjs": "^0.2.0"
+    },
   "devDependencies": {
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
