--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task-manager",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .jsx,.js ./app/javascript/**/*",
@@ -13,12 +13,13 @@
     "@rails/webpacker": "3.5",
     "babel-eslint": "^10.0.1",
     "babel-preset-react": "^6.24.1",
+    "eventbusjs": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-contextmenu": "^2.10.0",
     "react-dom": "^16.7.0",
     "react-edit-inline2": "^1.0.2",
-    "react_ujs": "^2.4.4",
-    "eventbusjs": "^0.2.0"
+    "react_ujs": "^2.4.4"
     },
   "devDependencies": {
     "eslint": "^5.6.1",
