--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task-manager",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .jsx,.js ./app/javascript/**/*",
@@ -16,6 +16,7 @@
     "eventbusjs": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-beautiful-dnd": "^10.0.3",
     "react-contextmenu": "^2.10.0",
     "react-dom": "^16.7.0",
     "react-edit-inline2": "^1.0.2",
