--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task-manager",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .jsx,.js ./app/javascript/**/*",
@@ -10,9 +10,9 @@
     "db:seed": "rails db:seed"
   },
   "dependencies": {
-    "@rails/webpacker": "3.5",
+    "@rails/webpacker": "^4.2.2",
     "babel-eslint": "^10.0.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/preset-react": "^7.0.0",
     "eventbusjs": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
